k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "whatmovie.tehjoker.com"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: whatmovie
              port:
                number: 80
  - host: "exotics.tehjoker.com"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: exotics
              port:
                number: 80

  ingressClassName: nginx
